# youtubeinsights-mcp-server

./: .gitignore  README.ko.md  README.md  pyproject.toml
src/youtubeinsights_mcp_server/: __init__.py  server.py
